--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,14 @@
+# API Key for Anthropic
 ANTHROPIC_API_KEY=
+# API key for Mistral
+MISTRAL_API_KEY=
+# Host for Ollama
 OLLAMA_HOST=
+# API Key for OpenAI
 OPENAI_API_KEY=
+# DSN for where postgres is running to store the datasets
 POSTGRES_DSN=postgres://postgres:postgres@localhost:5432
-REPORT_POSTGRES_DSN=postgres://postgres:postgres@localhost:5432/tsdb
+# DSN for where to report the results of text-to-sql eval run
+REPORT_POSTGRES_DSN=postgres://postgres:postgres@localhost:5432/postgres
+# Where was a given eval run done from, useful to differentiate between local and CI runs
 SOURCE=local
